--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
     <!-- ICON PADA ADDRESS BAR -->
-    <link rel="icon" type="image/png" href="img/Logo.png">
+    <link rel="icon" type="image/png" href="assets/img/Logo.png">
 
     <!-- BOX ICONS -->
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
